# publish-data-rest

./: Cargo.toml  config.toml
.github/workflows/: generate.yml  release.yml  tests.yml  version.yml
bkup/endpoint/microblink_receipt/: Cargo.toml
bkup/lib/: Cargo.toml
bkup/lib/src/: api.rs
bkup/lib/src/aws/: s3.rs  sign.rs
bkup/schema/microblink_receipt/: microblink_receipt.avsc  microblink_receipt.rs
bkup/src/config/: schema.rs
bkup/template/: cargo.mustache
endpoint/: Cargo.toml
endpoint/microblink_receipt/: Cargo.toml  package.json  wrangler.toml
endpoint/microblink_receipt/src/: lib.rs  microblink_receipt.rs
endpoint/shopify_order/: Cargo.toml  package.json  wrangler.toml
endpoint/src/: handler.rs  lib.rs  utils.rs
endpoint/src/utils/: crypto.rs  guard.rs  jwt.rs
endpoint/src/utils/api/: cors.rs  error_builder.rs
endpoint/src/utils/aws/: s3.rs  sign.rs
endpoint/src/utils/jwt/: config.rs  payload.rs  validate.rs
generate/: Cargo.toml
generate/schema/shopify_order/: shopify_order.json
generate/src/: config.rs
generate/template/: wrangler.mustache
infra/: makefile  package-lock.json  package.json  wrangler.toml
lib/src/: aws.rs  lib.rs  misc.rs
lib/src/api/: cors.rs  error_builder.rs
lib/src/jwt/: validate.rs
lib/src/misc/: crypto.rs
schema/: Cargo.toml
schema/microblink_receipt/: microblink_receipt.avsc  microblink_receipt.json  microblink_receipt.rs  taxonomy.md
schema/shopify_order/: shopify_order.avsc  shopify_order.rs
schema/src/: dummy.rs  lib.rs  microblink_receipt.rs  shopify_order.rs  utils.rs
schema/src/dummy/: input.rs  output.avsc  (+1 more)
src/: main.rs
template/: lib.mustache  package.mustache
(+5 files in other folders)
