[package]
name = "publish-data-rest-endpoint"
version = "0.0.1"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.97"
chrono = "0.4.26"
sha2 = "0.10.6"
base16ct = { version = "0.2.0", features = ["alloc"] }
hmac = "0.12.1"
reqwest = { version = "0.11", features = ["json"] }
getrandom = { version = "0.2.10", features = ["js"] }
jwt-compact = { version = "0.8.0-beta.1", features = ["p256", "k256"] }
apache-avro = { version = "0.16.0", features = ["snappy"] }
publish-data-rest-schema = { version = "0.0.1", path = "../schema", features = ["microblink_receipt"] }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
