[package]
name = "ingest-lib"
version = "0.0.1"
edition = "2021"

[dependencies]
worker = "0.0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.97"
chrono = "0.4.26"
sha2 = "0.10.6"
base16ct = { version = "0.2.0", features = ["alloc"] }
hmac = "0.12.1"
reqwest = { version = "0.11", features = ["json"] }
getrandom = { version = "0.2.10", features = ["js"] }
jwt-compact = {version = "0.8.0-beta.1", features = ["p256", "k256"] }
apache-avro = { version = "0.15.0", features = ["snappy"] }

[dev-dependencies]
async-std = {version = "1.12.0", features = ["attributes", "tokio1"]}
